@@ -1,7 +1,8 @@
 <configure xmlns="http://namespaces.zope.org/zope">
 
   <adapter factory=".resource.AbsoluteURL" />
-  
+  <adapter factory=".file.FileETag" />
+
   <view
       for="zope.component.interfaces.ISite"
       type="zope.publisher.interfaces.browser.IDefaultBrowserLayer"
@@ -17,14 +18,14 @@
         attributes="GET HEAD __call__"
         />
   </class>
-  
+
   <class class=".i18nfile.I18nFileResource">
     <allow
         interface="zope.publisher.interfaces.browser.IBrowserPublisher"
         attributes="GET HEAD __call__"
         />
   </class>
-  
+
   <class class=".directory.DirectoryResource">
     <allow
         interface="zope.publisher.interfaces.browser.IBrowserPublisher"
